# minimodal

./: .gitignore  LICENSE  README.md
.github/workflows/: ci.yml
app/: app.py  requirements.txt
assets/: demo.cast
client/: client.py  pyproject.toml  requirements.txt
client/minimodal/: __init__.py  cli.py  client.py
common/protos/: minimodal.proto  stupid-modal.proto
server/: .gitignore  requirements.txt  server.py
tests/: test_e2e.py
